test/error/parse/ExpectIdent.mod
MODULE ExpectIdent;
VAR : INTEGER;
END ExpectIdent.
